--- a/CronScheduler.Core/CronScheduler.Core.csproj
+++ b/CronScheduler.Core/CronScheduler.Core.csproj
@@ -4,7 +4,33 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>Crontab.Scheduler</PackageId>
+    <Title>Crontab Scheduler</Title>
+    <Version>1.0.0</Version>
+    <Authors>tiger45</Authors>
+    <Product>NCrontabScheduler</Product>
+    <Description>Built on top of NCrontab by atifaziz, a scheduler that will automatically call your desired methods according to the given cron expression.</Description>
+    <PackageProjectUrl>https://github.com/tiger4589/CronScheduler</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/tiger4589/CronScheduler</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>crontab;schedule;cronjob;</PackageTags>
+    <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageLicenseFile>ApacheLicense2.0.txt</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\ApacheLicense2.0.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
