--- a/CronScheduler.Core/CronScheduler.Core.csproj
+++ b/CronScheduler.Core/CronScheduler.Core.csproj
@@ -17,12 +17,12 @@
     <PackageTags>crontab;schedule;cronjob;</PackageTags>
     <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-    <PackageLicenseFile>ApacheLicense2.0.txt</PackageLicenseFile>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\ApacheLicense2.0.txt">
+    <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
